# shogun-desktop

./: .gitattributes  .gitignore  CREDITS  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
assets/: Info.plist
crates/alacritty_terminal/: .cargo_vcs_info.json  Cargo.toml
crates/alacritty_terminal/src/term/: mod.rs
docs/: ARCHITECTURE.md  aki-term-design.md
scripts/: bundle_macos.sh  gen_icon_ico.mjs  generate_icns.sh
src/: ansi.rs  app.rs  image_upload.rs  main.rs  native_ssh.rs  settings.rs  shell_window.rs  ssh.rs  theme.rs  window.rs
src/tabs/: agents_tab.rs  dashboard_tab.rs  mod.rs  settings_tab.rs  shogun_tab.rs  terminal_tab.rs
src/terminal/: keys.rs  mod.rs  pty_session.rs  renderer.rs
