[package]
name = "shogun-desktop"
version = "0.1.0"
edition = "2024"

[dependencies]
gpui = "0.2.2"
gpui-component = "0.5.1"
alacritty_terminal = "0.26"
portable-pty = "0.9"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_yml = "0.0.12"
toml = "1"
dirs = "6"
regex = "1"

[build-dependencies]
winres = "0.1"
