[package]
name = "shogun-desktop"
version = "0.1.0"
edition = "2024"

[dependencies]
gpui = "0.2.2"
gpui-component = "0.5.1"
alacritty_terminal = "0.24"
portable-pty = "0.9"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_yml = "0.0.12"
toml = "1"
dirs = "6"
regex = "1"
russh = { version = "0.61", default-features = false, features = ["ring"] }
# russh-keys deferred to Phase 2 (pins home=0.5.5, conflicts with gpui ^0.5.9)
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "io-util", "time", "net", "macros", "process"] }
unicode-width = "0.2"
parking_lot = "0.12"
arboard = "3"

[build-dependencies]
winres = "0.1"
